force-app/main/default/objects/Onboarding_Checklist__c/Onboarding_Checklist__c.object-meta.xml
<CustomObject>
    <label>Onboarding Checklist</label>
    <nameField>
        <displayFormat>OBC-{0000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>