force-app/main/default/objects/Onboarding_Checklist__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Hours Configured</label>
    <type>Checkbox</type>
</CustomField>