force-app/main/default/objects/Onboarding_Checklist__c/fields/Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Profile Completed</label>
    <type>Checkbox</type>
</CustomField>