force-app/main/default/objects/Onboarding_Checklist__c/fields/Custom_Field_Created__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Field Created</label>
    <type>Checkbox</type>
</CustomField>