force-app/main/default/objects/Onboarding_Checklist__c/fields/Custom_Object_Created__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Object Created</label>
    <type>Checkbox</type>
</CustomField>