force-app/main/default/objects/Onboarding_Checklist__c/fields/First_User_Created__c.field-meta.xml
<CustomField>
    <fullName>First_User_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First User Created</label>
    <type>Checkbox</type>
</CustomField>