force-app/main/default/objects/Onboarding_Checklist__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fiscal Year Configured</label>
    <type>Checkbox</type>
</CustomField>