force-app/main/default/objects/Onboarding_Checklist__c/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holidays Configured</label>
    <type>Checkbox</type>
</CustomField>