force-app/main/default/objects/Onboarding_Checklist__c/fields/Login_IP_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Login_IP_Ranges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login IP Ranges Reviewed</label>
    <type>Checkbox</type>
</CustomField>