force-app/main/default/objects/Onboarding_Checklist__c/fields/MFA_Setup__c.field-meta.xml
<CustomField>
    <fullName>MFA_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MFA Setup Completed</label>
    <type>Checkbox</type>
</CustomField>