force-app/main/default/objects/Onboarding_Checklist__c/fields/Password_Policies__c.field-meta.xml
<CustomField>
    <fullName>Password_Policies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Policies Reviewed</label>
    <type>Checkbox</type>
</CustomField>