force-app/main/default/objects/Onboarding_Checklist__c/fields/Permission_Set_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission Set Assigned</label>
    <type>Checkbox</type>
</CustomField>