force-app/main/default/objects/Onboarding_Checklist__c/fields/Profile_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Profile_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Assigned</label>
    <type>Checkbox</type>
</CustomField>