force-app/main/default/objects/Onboarding_Checklist__c/fields/Session_Settings__c.field-meta.xml
<CustomField>
    <fullName>Session_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Settings Reviewed</label>
    <type>Checkbox</type>
</CustomField>