force-app/main/default/objects/Onboarding_Checklist__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>