force-app/main/default/objects/Onboarding_Checklist__c/fields/Validation_Rule_Created__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Rule Created</label>
    <type>Checkbox</type>
</CustomField>